--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/JuanCundafe/api-mentors/issues"
   },
-  "homepage": "https://github.com/JuanCundafe/api-mentors#readme"
+  "homepage": "https://github.com/JuanCundafe/api-mentors#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "mongoose": "^5.9.24"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
